suite/tests/functions/valid/call-no-args.c
int one(void)
{
    return 1;
}

int main(void)
{
    return one();
}
