suite/tests/functions/invalid/for-init-not-function.c
int main(void)
{
    for (int foo(void);;) {}
}
